Try to make some major changes to web page.

--- a/sample.html
+++ b/sample.html
@@ -69,30 +69,26 @@
     <div>
 <div class="title">
     <h1 id="head">Event Participating Form</h1>
-    <img id="ohnoes" src="https://www.kasandbox.org/programming-images/avatars/marcimus-red.png" width="5px"alt="Start image">
+    <img id="ohnoes" src="https://www.kasandbox.org/programming-images/avatars/marcimus-red.png" width="5px"alt="Startimage">
   </div>
-    <div class="yo">
-    <br>
+    
     <div class="kkk">
+      <div>
     <label class="ques">What's your name</label>
-    <br>
-    <br>
     <input id="name" class="ques" type="text" name="" value="">
-    <br>
-    <br>
+    </div>
+    <div>
     <label class="ques">What event do you want to participate</label>
-    <br>
-    <br>
+    </div>
     <select id="event"class="ques">
       <option value="s">Select option</option>
       <option value="Code Champ">Code Champ</option>
       <option value="Code Hunt">Code Hunt</option>
       <option value="Hour of Code">Hour of Code</option>
     </select>
-    <br>
-    <br>
     <button type="button" id="button">Click to complete details</button>
   </div>
+
 </div>
 <div id="out">
 <h3>Registration details</h3>
